v0.7
CHANGES:

v0.6
CHANGES:
- The randomizer is now run as a stand-alone executable with a GUI so users can generate their own seeds.
- The game now have four difficulty modes: Easy, Normal, Hard, and Extreme. The difficulty affects enemy stats, upgrades available, and how many HP are recovered from eating herbs.
- Room rewards are guaranteed to drop either a STR or DEF upgrade.  HP upgrades are available from beating bosses.  See the tutorial for more detailed information.
- The Dark Space in SW Sky Garden can now contain Dark Friar. (You can stand below the switch and reach it with Fredan's sword, so Dark Friar is not required to reach this Dark Space as was originally assumed.)
- Crystal Ring and Aura are now both required to enter Babel Tower.
- Dark Friar is now considered as required for progression through Mu.  This means the first Dark Space will always be open for transformation, and the other Dark Space will never contain Dark Friar.

KNOWN BUGS NOT YET ADDRESSED:
- Kara's portrait quest is complete when the Magic Dust is successfully used.  Kara's portrait will remain on the screen even after she is freed with the Magic Dust.  Leaving and reentering the room will provide visual confirmation that she has been freed -- however, this is unnecessary to complete the quest.
- When Kara's "portrait" appears in the Diamond Mine, she will look like her normal sprite instead of like the portrait itself. I hope to find a solution for this issue in future versions.
- Leaving the Jeweler's Mansion and immediately reentering via Dao causes the top layer to look strange.
- Acquiring Earthquaker still grants you Dark Friar
- Aura Barrier will not work unless you have Dark Friar


v0.5
CHANGES:
- Will now starts with standard health, defense, and strength.